<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16sdp"
    tools:context=".MainActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/waveAnimation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_32sdp"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/wave"
        app:lottie_speed="2.5" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_145sdp"
        android:text="00:00:00"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/title_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/waveAnimation"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/quotes_title"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/context_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_quote"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/quotes_ala_ala"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/hint_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/context_quote"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/hint_quotes"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="8">


        <Button
            android:id="@+id/btnStartStopTimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/_8sdp"
            android:text="@string/btn_start"
            android:textAllCaps="true"

            android:textColor="@color/color_onprimary"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnResetTimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/btn_reset"
            android:textAllCaps="true"
            android:textColor="@color/color_onprimary"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>